--- a/index.html
+++ b/index.html
@@ -16,21 +16,30 @@
 			<span class="image avatar"><img src="images/pp.png" alt="" /></span>
 			<h1 id="logo"><a href="#">Jishnu Janardhanan</a></h1>
 		</header>
+		<ul class="icons">
+			<li><a href="https://www.linkedin.com/in/jishnu2003/" class="icon brands fa-linkedin" target="_blank"><span
+						class="label">Linkedin</span></a></li>
+			<li><a href="https://github.com/jishnu2003" class="icon brands fa-github" target="_blank"><span
+						class="label">Github</span></a></li>
+			<li><a href="mailto:jishnu2003@gmail.com" class="icon solid fa-envelope" target="_blank"><span
+						class="label">Email</span></a></li>
+		</ul>
 		<nav id="nav">
 			<ul>
 				<li><a href="#one" class="active">About</a></li>
 				<li><a href="#two">Things I Can Do</a></li>
 				<li><a href="#three">Experience</a></li>
-				<li><a href="#four">Contact</a></li>
+				<!-- <li><a href="#four">Projects</a></li> -->
+				<!-- <li><a href="#four">Contact</a></li> -->
 			</ul>
 		</nav>
-		<footer>
+		<!-- <footer>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/jishnu2003/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/jishnu2003" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 				<li><a href="mailto:jishnu2003@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 			</ul>
-		</footer>
+		</footer> -->
 	</section>
 
 	<!-- Wrapper -->
@@ -72,13 +81,13 @@
 					<p>I love to explore new Programming Languages, however last few years have been mainly working on ruby.
 						Below are the few of the languages I had previously worked.</p>
 					<ul class="icons">
-							<li><img src="images/rails.png" alt="" height="100px" width="100px"/></li>
-							<li><img src="images/sap.png" alt="" height="80px" width="80px"/></li>
-							<li><img src="images/ruby.png" alt="" height="80px" width="80px"/></li>
-							<li><img src="images/redis.png" alt="" height="80px" width="80px"/></li>
-							<li><img src="images/elasticsearch.png" alt="" height="80px" width="80px"/></li>
-							<li><img src="images/rspec.png" alt="" height="80px" width="80px"/></li>
-							<li><img src="images/java.png" alt="" height="80px" width="80px"/></li>
+						<li><img src="images/rails.png" alt="" height="100px" width="100px" /></li>
+						<li><img src="images/sap.png" alt="" height="80px" width="80px" /></li>
+						<li><img src="images/ruby.png" alt="" height="80px" width="80px" /></li>
+						<li><img src="images/redis.png" alt="" height="80px" width="80px" /></li>
+						<li><img src="images/elasticsearch.png" alt="" height="80px" width="80px" /></li>
+						<li><img src="images/rspec.png" alt="" height="80px" width="80px" /></li>
+						<li><img src="images/java.png" alt="" height="80px" width="80px" /></li>
 					</ul>
 				</div>
 			</section>
@@ -87,32 +96,47 @@
 			<section id="three">
 				<div class="container">
 					<h3>Experience</h3>
-					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
-						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+					<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
+						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 					<div class="features">
 						<article>
 							<a href="#" class="image"><img src="images/truecaller.png" alt="" /></a>
-							<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing
-								ornare amet.</p>
+							<p>Presently working as payments engineer in Fintech BU and primarily focusing on integration of all third party vendors like BBPS, Redbus, Ixigo, OLA etc. into truecaller payments.</p>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/cc.png" alt="" /></a>
-							<p>Involved in architecting, sprint planning, developing and testing various applications. Worked on 10+ projects mostly as a lead developer. Responsible for communication with client and releases. Managing a team size of 7 across multiple projects.</p>
+							<p>Involved in architecting, sprint planning, developing and testing various applications. Worked on 10+
+								projects mostly as a lead developer. Responsible for communication with client and releases. Managing a
+								team size of 7 across multiple projects.</p>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/cts.png" alt="" /></a>
-							<p>Have played the role of techno-functional consultant i.e responsible for understanding the requirement from client and delivering the same as part of planned releases.</p>
+							<p>Have played the role of techno-functional consultant i.e responsible for understanding the requirement
+								from client and delivering the same as part of planned releases.</p>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/innoz.png" alt="" /></a>
-							<p>Integration of SMS GYAN(Offline SMS Search Engine) using Java and SMPP with different operators in India & Sri Lanka.</p>
+							<p>Integration of SMS GYAN(Offline SMS Search Engine) using Java and SMPP with different operators in
+								India & Sri Lanka.</p>
 						</article>
 					</div>
 				</div>
 			</section>
+			<!-- Four -->
+			<!-- <section id="four">
+				<div class="container">
+					<h3>Projects</h3>
+					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
+						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
+						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
+						Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+				</div>
+			</section> -->
 
 			<!-- Four -->
-			<section id="four">
+			<!-- <section id="four">
 				<div class="container">
 					<h3>Contact Me</h3>
 					<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non.
@@ -132,7 +156,7 @@
 						</div>
 					</form>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- Five -->
 			<!--
@@ -466,17 +490,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						-->
 
 		</div>
-
-		<!-- Footer -->
-		<!-- <section id="footer">
-			<div class="container">
-				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section> -->
-
 	</div>
 
 	<!-- Scripts -->
